2009-07-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.66

2009-07-22  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added setting for disabling launch transition for NB#128881.
	Use X-App-Loading-Image=none in desktop file to disable.

	* src/launcher/hd-launcher.c:
	* src/launcher/hd-launcher.h:

2009-07-22  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: NB#121519 - A blank frame like window with out any title is 
	                   shown on the desktop.

	* src/mb/hd-comp-mgr.c: Handling the old leader that has followers
	  become a follower case.

2009-07-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere for NB#123486.

	* src/home/hd-clutter-cache.c (hd_clutter_cache_get_real_texture):
	Recover from a broken theme by falling back to the default theme.

2009-07-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#129084 - Transition from Call UI to Desktop not according to
	                   spec

	* src/home/hd-render-manager.c: Now really leave window actors alone
	  if they are in the middle of a transition.
	* src/home/hd-title-bar.h
	* src/home/hd-title-bar.c	
	* src/home/hd-task-navigator.c: Modified hd_title_bar_create_fake to
	  not take an HdTitleBar as an argument (which was set to NULL?) but
	  to instead take the required width.
	* src/util/hd-transition.c
	* src/util/hd-transition.h: Added hd_transition_close_app_before_rotate
	  which keeps the app visible until the screen rotates. Also tweaked
	  the rotate animation to ensure that home applets weren't shown in the
	  portrait->landscape transition.	                   
	* src/mb/hd-comp-mgr.c: Call hd_transition_close_app_before_rotate when
	  an app closes that will cause the portrait->landscape transition.


	Fixes: NB#127016 - Background shows edges when scaled back to 
	                   full-screen
	* src/tidy/tidy-blur-group.c: If we are zoomed outwards and unblurring,